terminei parte de cima, titulo e botao

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     </div>
     <br>
     <br>
-    <a class="botaoo block fundo-branco" href="#Contato">Mais informações</a>
     
+    <a class="botaoo" href="#Contato">Contato</a>
+
     <div class="content">
       <div class="container">
         <div class="secao texto">
