--- a/index.html
+++ b/index.html
@@ -26,28 +26,26 @@
     </div>
     <br>
     <br>
-    
+    <div></div>
     <a class="botaoo" href="#Contato">Contato</a>
 
-    <div class="content">
-      <div class="container">
-        <div class="secao texto">
-            <h2 class="boladao navy-texto">Skills</h2>
+    <div class="container">
+        <div class="centralizar">
+            <h2 class="boladao navy-texto">About me</h2>
             <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti exercitationem voluptates ea harum tenetur ab cupiditate dolor laudantium, minima eligendi consequuntur id nesciunt aperiam sit nemo error maxime hic itaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, obcaecati. Nisi quos sed consequatur? Vitae animi quae fuga odio nobis quia repellat doloremque saepe odit, modi, minima accusamus alias consequatur?</p>
             <br>
-            <label class="label">UI/UX Design</label> <div class="progress-label">85%</div>
+
+            <span class="barras-progresso"><label class="label">UI/UX Design</label> <div class="progress-label">85%</div>
             <progress class="progress" max="100" value="85">85%</progress> 
             <label class="label">Web Design</label><div class="progress-label">75%</div>
             <progress class="progress" max="100" value="75">75%</progress>
             <label class="label">HTML/CSS</label><div class="progress-label">90%</div>
             <progress class="progress" max="100" value="90">90%</progress>
-            <label class="label">Sketch</label><div class="progress-label">65%</div>
-            <progress class="progress" max="100" value="65">65%</progress>
-            <br>
-            <br>
+
+            <a class="botao" href="#Contato">Download CV</a></div>
+            
         </div>
-      </div>
     </div>
 
     <div class="intro2">
@@ -55,8 +53,8 @@
       <p>HTML, CSS, PYTHON</p>
     </div>
 
-        <div class="content">
-            <div class="container">
+        <div class="container2">
+            <div class="centralizar">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<p>
             </div>
           </div>
@@ -68,7 +66,7 @@
       <p>HTML, CSS, PYTHON</p>
     </div>
 
-        <div class="content">
+        <div class="container3">
             <div class="container">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<p>
             </div>
