--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti exercitationem voluptates ea harum tenetur ab cupiditate dolor laudantium, minima eligendi consequuntur id nesciunt aperiam sit nemo error maxime hic itaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, obcaecati. Nisi quos sed consequatur? Vitae animi quae fuga odio nobis quia repellat doloremque saepe odit, modi, minima accusamus alias consequatur?</p>
             <br>
 
-            <span class="barras-progresso"><label class="label">UI/UX Design</label> <div class="progress-label">85%</div>
+            <span class="barras-progresso"><label class="label">CSS - FLEXBOX</label> <div class="progress-label">85%</div>
             <progress class="progress" max="100" value="85">85%</progress> 
-            <label class="label">Web Design</label><div class="progress-label">75%</div>
+            <label class="label">RESPONSIVENESS</label><div class="progress-label">75%</div>
             <progress class="progress" max="100" value="75">75%</progress>
-            <label class="label">HTML/CSS</label><div class="progress-label">90%</div>
+            <label class="label">HTML</label><div class="progress-label">90%</div>
             <progress class="progress" max="100" value="90">90%</progress></span>
 
 
