--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <div class="menu">
     <nav>
         <ul>
-            <li><a class="btn-top" href="#">Cv</a></li>
-            <li><a class="btn-top" href="#">Sobre</a></li>
-            <li><a class="btn-top" href="#">Habilidades</a></li>
-            <li><a class="btn-top" href="#">Contato</a></li>
+            <li><a class="btn-top" href="#">Curriculum</a></li>
+            <li><a class="btn-top" href="#">About</a></li>
+            <li><a class="btn-top" href="#">Skills</a></li>
+            <li><a class="btn-top" href="#">Contact</a></li>
          </ul>
     </nav>
 </div>
